static/css/pastGames.css
#past-games {
  background-color: var(--background-color3);
  padding: 1em 5em;
}

.year-div {
  background-color: var(--background-color2);
  max-width: 100vw;
  padding: 1em;
  overflow-x: scroll;
}

.year-div:not(.selected) {
  display: none;
}

div[game-id]:not(.selected) {
  display: none;
}

.game-button {
  width: 4em;
  object-fit: cover;
  aspect-ratio: 1/1;
  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
  flex-shrink: 0;
}

.year-button {
  border: none;
  border-radius: 0.3125em;
  background-color: var(--background-color1);
  color: var(--secondary-color2);
  width: 5em;
  max-width: 25vw;
  padding: 0.3em 0;
  font-size: 1.5rem;
  font-weight: bold;
  cursor: pointer;
  transition: filter 0.2s ease-in-out;
  filter: brightness(0.8);
}

.year-button:hover {
  filter: brightness(1.1);
}

.year-button.selected {
  filter: brightness(1.3);
}

.game-button:hover {
  transform: scale(1.1) translateY(-0.2em);
  box-shadow: 0 0.1em 0.5em rgba(255, 255, 255, 0.5);
  cursor: pointer;
}

.game-button.selected {
  transform: scale(1.1) translateY(-0.2em);
  box-shadow: 0 0.1em 1em var(--secondary-color2);
}

video.game-video,
img.game-thumbnail {
  display: block;
  height: 10em;
}

